--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
       Test for Anil Vasudev
     </b>
   </P>
-  <img src="LinkedIn Photo.jpg"></img>
+  <img src="LinkedIn Photo.jpg" width="500" height="600"></img>
 <a href="PFolio.html"> PortFolio</a>
 </HTML>
