--- a/index.html
+++ b/index.html
@@ -6,4 +6,5 @@
   </P>
   <img src="LinkedIn Photo.jpg" width="500" height="600"></img>
 <a href="PFolio.html"> PortFolio</a>
+<a href="PTest.html"> PortFolio_DesignTest</a>
 </HTML>
