--- a/PTest.html
+++ b/PTest.html
@@ -1,1 +1,121 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Professional Portfolio - Anilkumar Vasudevakurup</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .container {
+            max-width: 900px;
+            margin: 20px auto;
+            padding: 20px;
+            background: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1, h2, h3 {
+            color: #333;
+        }
+        h1 {
+            text-align: center;
+            font-size: 2.5em;
+        }
+        h2 {
+            border-bottom: 2px solid #007BFF;
+            padding-bottom: 5px;
+            margin-top: 20px;
+        }
+        h3 {
+            margin-top: 15px;
+            font-size: 1.2em;
+        }
+        p, ul {
+            margin: 10px 0;
+            color: #555;
+        }
+        ul {
+            list-style-type: disc;
+            padding-left: 20px;
+        }
+        .contact-info {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .contact-info a {
+            color: #007BFF;
+            text-decoration: none;
+        }
+        .contact-info a:hover {
+            text-decoration: underline;
+        }
+        .section {
+            margin-bottom: 20px;
+        }
+        .project {
+            margin-left: 20px;
+        }
+        .results {
+            font-style: italic;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Anilkumar Vasudevakurup</h1>
+        <div class="contact-info">
+            <p>Product Management & Customer Success Professional</p>
+            <p>Email: <a href="mailto:anilvasudev2001@gmail.com">anilvasudev2001@gmail.com</a></p>
+            <p>LinkedIn: <a href="https://linkedin.com/in/anil-vasudevakurup" target="_blank">linkedin.com/in/anil-vasudevakurup</a></p>
+        </div>
+
+        <div class="section">
+            <h2>Professional Summary</h2>
+            <p>Experienced product management and customer success professional with extensive expertise in implementing digital commerce solutions and enterprise integration projects. Specialized in cloud-based platforms for the automotive, industrial, and manufacturing sectors, focusing on enhancing operational efficiency and customer experience through intelligent system integration.</p>
+        </div>
+
+<!-- Skills Section -->
+<div style="background-color: #E8FAF6; padding: 40px; font-family: 'Segoe UI', sans-serif;">
+  <h4 style="color: #5E6C84; letter-spacing: 1px; text-transform: uppercase;">My Skills</h4>
+  <h1 style="font-size: 2.5em; color: #101820; margin-top: 0;">Building products for humans</h1>
+  <p style="max-width: 500px; line-height: 1.6; font-size: 1.1em; color: #333;">
+    With my startup background, I bring a lean mindset for building products fast. My psychology background uniquely connects me to building products that understand and enhance user experiences.
+  </p>
+
+  <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 20px; margin-top: 40px;">
+    <!-- Product Strategy -->
+    <div style="background: white; padding: 20px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.05);">
+      <h2 style="margin-bottom: 8px;">📈 Product Strategy</h2>
+      <p style="color: #555;">Roadmapping, A/B Tests, Project Management</p>
+    </div>
+
+    <!-- Product Design -->
+    <div style="background: white; padding: 20px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.05);">
+      <h2 style="margin-bottom: 8px;">🛠️ Product Design</h2>
+      <p style="color: #555;">User Stories, User Flows, Wireframes, Persona Writing</p>
+    </div>
+
+    <!-- Market & User Research -->
+    <div style="background: white; padding: 20px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.05);">
+      <h2 style="margin-bottom: 8px;">🔍 Market & User Research</h2>
+      <p style="color: #555;">Market Analysis, Experiment Design, Usability Testing</p>
+    </div>
+
+    <!-- Analytics & Programming -->
+    <div style="background: white; padding: 20px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.05);">
+      <h2 style="margin-bottom: 8px;">💻 Analytics & Programming</h2>
+      <p style="color: #555;">Software Development and Management</p>
+    </div>
+  </div>
+</div>
+
+<!-- Remaining content omitted for brevity -->
+</div>
+</body>
+</html>
