--- a/PTest.html
+++ b/PTest.html
@@ -86,7 +86,7 @@
   <h4 style="color: #5E6C84; letter-spacing: 1px; text-transform: uppercase;">My Skills</h4>
   <h1 style="font-size: 2.5em; color: #101820; margin-top: 0;">Building products for humans</h1>
   <p style="max-width: 500px; line-height: 1.6; font-size: 1.1em; color: #333;">
-    With my startup background, I bring a lean mindset for building products fast. My psychology background uniquely connects me to building products that understand and enhance user experiences.
+Rooted in the agile spirit of startups, I bring a lean, rapid-fire approach to crafting impactful products. My foundation in Physics and Computer Science forms a rare bridge—uniting the logic of systems with the poetry of user experience. I don’t just build products—I shape intuitive journeys that think, respond, and evolve with the user.
   </p>
 
   <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 20px; margin-top: 40px;">
