--- a/PTest.html
+++ b/PTest.html
@@ -113,6 +113,12 @@ Rooted in the agile spirit of startups, I bring a lean, rapid-fire approach to c
       <h2 style="margin-bottom: 8px;">💻 Analytics & Programming</h2>
       <p style="color: #555;">Software Development and Management</p>
     </div>
+
+    <!-- AI Product Managermnent -->
+    <div style="background: white; padding: 20px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.05);">
+      <h2 style="margin-bottom: 8px;">💻 Agents</h2>
+      <p style="color: #555;">How to build agents</p>
+    </div>
   </div>
 </div>
 
