--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       Test for Anil Vasudev
     </b>
   </P>
-  <img src="LinkedIn Photo.jpg" width="500" height="600"></img>
+--  <img src="LinkedIn Photo.jpg" width="500" height="600"></img>
 <a href="PFolio.html"> PortFolio</a>
 <a href="PTest.html"> PortFolio_DesignTest</a>
 </HTML>
