--- a/PTest.html
+++ b/PTest.html
@@ -119,6 +119,15 @@ Rooted in the agile spirit of startups, I bring a lean, rapid-fire approach to c
       <h2 style="margin-bottom: 8px;">💻 Agents</h2>
       <p style="color: #555;">How to build agents</p>
     </div>
+
+      <!-- Projects -->
+<div style="background: white; padding: 20px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.05);">
+  <h2 style="margin-bottom: 8px;">💻 Projects</h2>
+  <p style="color: #555;">Assignments</p>
+  <a href="https://avasudev18.github.io/PFolioAV.github.io/PFolio.html" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
+    🌐 View Portfolio
+  </a>
+</div>
   </div>
 </div>
 
