--- a/index.html
+++ b/index.html
@@ -77,6 +77,41 @@
       </p>
     </div>
 
+    <!-- NEW Section -->
+
+<div class="card">
+  <h2>About Me</h2>
+  <p>
+    I'm a product leader with 15+ years of experience delivering scalable digital platforms for Fortune 500s and B2B SaaS startups.
+    My expertise spans product strategy, ERP-cloud integration, AI-powered analytics, and leading cross-functional teams to launch innovative, customer-centric solutions.
+  </p>
+  <div style="margin-top: 20px;">
+    <a href="Anil.Vasudev_mst04272025.pdf" download class="button">📄 Download Resume (PDF)</a>
+    <a href="Anil.Vasudev_mst04302025.docx" download class="button">📘 Download Assignments (DOCX)</a>
+  </div>
+</div>
+
+<style>
+  .button {
+    display: inline-block;
+    background-color: #007acc;
+    color: white;
+    padding: 10px 20px;
+    margin-right: 10px;
+    margin-top: 10px;
+    border-radius: 8px;
+    text-decoration: none;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+  }
+  .button:hover {
+    background-color: #005b96;
+  }
+</style>
+
+        
+<!-- New Section -->
+
     <div class="card">
       <h2>Core Expertise</h2>
       <p>
