--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   </p>
   <div style="margin-top: 20px;">
     <a href="Anil.Vasudev_mst04272025.pdf" download class="button">📄 Download Resume (PDF)</a>
-    <a href="Anil.Vasudev_mst04302025.docx" download class="button">📘 Download Assignments (DOCX)</a>
+    <a href="https://avasudev18.github.io/PFolioAV.github.io/PFolio.html" download class="button">📘 Download Assignments (DOCX)</a>
   </div>
 </div>
 
