--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
   </p>
   <div style="margin-top: 20px;">
     <a href="Anil.Vasudev_mst04272025.pdf" download class="button">📄 Download Resume (PDF)</a>
-    <a href="https://avasudev18.github.io/PFolioAV.github.io/PFolio.html" download class="button">📘 Download Assignments (DOCX)</a>
+    --<a href="https://avasudev18.github.io/PFolioAV.github.io/PFolio.html" download class="button">📘 Download Assignments (DOCX)</a>
+     <a href="https://avasudev18.github.io/PFolioAV.github.io/PFolio.html" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
+    🌐 View Portfolio
   </div>
 </div>
 
