--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
   </header>
 
   <section>
-    <div class="card">
+  <!--  <div class="card">
       <h2>About Me</h2>
       <p>
         I'm a product leader with 15+ years of experience delivering scalable digital platforms for Fortune 500s and B2B SaaS startups.
         My expertise spans product strategy, ERP-cloud integration, AI-powered analytics, and leading cross-functional teams to launch innovative, customer-centric solutions.
       </p>
-    </div>
+    </div>-->
 
     <div class="card">
       <h2>About Me</h2>
