--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
       <p>
         I'm a product leader with 15+ years of experience delivering scalable digital platforms for Fortune 500s and B2B SaaS startups.
         My expertise spans product strategy, ERP-cloud integration, AI-powered analytics, and leading cross-functional teams to launch innovative, customer-centric solutions.
+    <a href="https://avasudev18.github.io/PFolioAV.github.io/mYreSume.html" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
+    🌐 View Resume
+    <a href="https://avasudev18.github.io/PFolioAV.github.io/PFolio.html" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
+    🌐 View Portfolio
       </p>
     </div>
     
