--- a/index.html
+++ b/index.html
@@ -80,9 +80,8 @@
     <div class="card">
       <h2>About Me</h2>
       <p>
-        I'm a product leader with 15+ years of experience delivering scalable digital platforms for Fortune 500s and B2B SaaS startups.
-        My expertise spans product strategy, ERP-cloud integration, AI-powered analytics, and leading cross-functional teams to launch innovative, customer-centric solutions.
-      </p>
+        Strategic Product Leader with a track record of driving innovation across Field Service, eCommerce, and Cloud platforms for B2B SaaS and enterprise organizations. Expert in orchestrating ERP-cloud integrations (AWS, Azure), managing full product lifecycles, and turning complex technical ecosystems into high-performing, secure, and scalable solutions. Known for delivering measurable outcomes - 40% efficiency gains, 20% revenue growth, and 80% customer retention by aligning customer needs with product strategy, analytics, and cross-functional execution.
+       </p>
       <p>
     <a href="https://avasudev18.github.io/PFolioAV.github.io/Anil.Vasudev_mst04272025.pdf" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
     🌐 View Resume </a>
