--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       background: linear-gradient(to right, #e0f2ff, #cfd8dc);
       padding: 40px 20px;
       text-align: center;
-      background-image: url('https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?blur=30'); /* Product dashboard blur */
+      -- background-image: url('https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?blur=30'); /* Product dashboard blur */
+      <a href="https://avasudev18.github.io/PFolioAV.github.io/Anil.Vasudev_mst04272025.pdf" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
+      </a>
       background-size: cover;
       color: #003366;
     }
