--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       background: linear-gradient(to right, #e0f2ff, #cfd8dc);
       padding: 40px 20px;
       text-align: center;
-    background-image: url('https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?blur=30'); /* Product dashboard blur */ 
+    background-image: url('https://avasudev18.github.io/PFolioAV.github.io/Desert.png?blur=30'); /* Product dashboard blur */ 
     
       background-size: cover;
       color: #003366;
