--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     header {
       background: linear-gradient(to right, #e0f2ff, #cfd8dc);
       padding: 40px 20px;
-      text-align: center;
+      text-align: right;
     background-image: url('https://avasudev18.github.io/PFolioAV.github.io/Desert.png?blur=30'); /* Product dashboard blur */ 
     
       background-size: cover;
