--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     background-image: url('https://avasudev18.github.io/PFolioAV.github.io/Desert.png?blur=30'); /* Product dashboard blur */ 
     
       background-size: cover;
-      color: #003366;
+      color:#FFFFFF;
     }
     h1 {
       font-size: 36px;
