--- a/index.html
+++ b/index.html
@@ -125,6 +125,15 @@
         <li>M.S. in Physics – Mahatma Gandhi University, India</li>
       </ul>
     </div>
+
+    <div class="card">
+      <h2>Passion</h2>
+      <ul>
+        <li>M.S. in Information Science – Colorado Tech University</li>
+        <li>M.S. in Physics – Mahatma Gandhi University, India</li>
+      </ul>
+    </div>
+    
   </section>
 
   <footer>
