--- a/index.html
+++ b/index.html
@@ -133,6 +133,12 @@
         <li>M.S. in Physics – Mahatma Gandhi University, India</li>
       </ul>
     </div>
+
+    <div class="card">
+  <h2><a href="https://avasudev18.github.io/PFolioAV.github.io/passion.html" style="text-decoration: none; color: inherit;">Passion</a></h2>
+  <ul>
+  </ul>
+</div>
     
   </section>
 
