--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <p>
         💡 Product Lifecycle Management | 📊 Data-Driven Decision Making  | 🤝 Customer Success Strategy | ☁️ Cloud Platforms (AWS, Azure, GCP) |
         🔗 ERP & Catalog Integrations | 🧠 Generative AI & Chatbots | 🔄 Operational Efficiency | 📈 Revenue Acceleration | 🤝 Continuous Improvement |
-         📊 Agile Methodologies | 💡Digital Transformation | 🔄 Customer Experience (CX) | 🔗 Cross-Functional Collaboration | Continuous Improvement |
+         📊 Agile Methodologies | 💡Digital Transformation | 🔄 Customer Experience (CX) | 🔗 Cross-Functional Collaboration | 🔄 Continuous Improvement |
          🔄 Customer Retention | 🤝 Team Leadership
       </p>
     </div>
