--- a/index.html
+++ b/index.html
@@ -111,6 +111,26 @@
       <p>Successfully launched field service automation, digital commerce platforms, and analytics tools impacting global operations.</p>
     </div>
 
+<div class="card">
+  <h2>Built with a Purpose</h2>
+  <ul>
+    <li>
+      <strong>Mobile Field Service:</strong> 
+      <a href="https://avasudev18.github.io/PFolioAV.github.io/MobileFieldService.mp4" target="_blank">
+        This video
+      </a> showcases Oracle Field Service seamlessly integrated with third-party vendors through robust API connections, 
+      enabling real-time coordination and streamlined service execution.
+    </li>
+    <li>
+      <strong>Dynamic Pricing:</strong> 
+      <a href="https://youtu.be/-oHZEWG3xq8?si=Ovdgtu5xsUalDKj7" target="_blank">
+        This podcast
+      </a> delves into the deployment of AI-driven dynamic pricing models within eCommerce platforms, detailing how intelligent agents utilize real-time  
+      data—such as demand elasticity, competitor pricing, inventory levels, and customer behavior—to algorithmically adjust prices and maximize revenue performance.
+    </li>
+  </ul>
+</div>
+    
     <div class="card">
       <h2>Certifications</h2>
       <ul>
