--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
 
   <section>
   <!--  <div class="card">
+    <img src="https://avasudev18.github.io/PFolioAV.github.io/LinkedIn Photo.jpg" 
+     alt="Anil Vasudev" 
+     style="width:150px; height:150px; border-radius: 50%; margin-bottom: 20px;" />
+    
       <h2>About Me</h2>
       <p>
         I'm a product leader with 15+ years of experience delivering scalable digital platforms for Fortune 500s and B2B SaaS startups.
