--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     </div>
 
 <div class="card">
-  <h2>Built with a Purpose</h2>
+  <h2>Artifacts</h2>
   <ul>
     <li>
       <strong>Mobile Field Service:</strong> 
