--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <a href="https://avasudev18.github.io/PFolioAV.github.io/Anil.Vasudev_mst04272025.pdf" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
     🌐 View Resume </a>
     <a href="https://avasudev18.github.io/PFolioAV.github.io/PFolio.html" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
-    🌐 View Portfolio</a>
+    🌐 View Product Portfolio</a>
       </p>
     </div>
     
