--- a/index.html
+++ b/index.html
@@ -111,6 +111,11 @@
   <h2>Artifacts</h2>
   <ul>
     <li>
+      <strong>Heavy Duty Parts Catalog Integration</strong> 
+      <a href="https://avasudev18.github.io/PFolioAV.github.io/feature/catalog-Cld.html" target="_blank">
+        </a> This project integrated heavy-duty parts catalogs with the CxCommerce platform to enable real-time product data, pricing, and inventory visibility. The goal was to enhance customer experience, improve operational efficiency, and drive business growth.
+    </li>
+    <li>
       <strong>Mobile Field Service:</strong> 
       <a href="https://avasudev18.github.io/PFolioAV.github.io/MobileFieldService.mp4" target="_blank">
         This video
