--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
     <li>
       <strong>Heavy Duty Parts Catalog Integration</strong> 
       <a href="https://github.com/avasudev18/PFolioAV.github.io/blob/main/feature/catalog-Cld.html" target="_blank">
-        </a> This project integrated heavy-duty parts catalogs with the CxCommerce platform to enable real-time product data, pricing, and inventory visibility. The goal was to enhance customer experience, improve operational efficiency, and drive business growth.
+        This project
+        </a> integrated heavy-duty parts catalogs with the CxCommerce platform to enable real-time product data, pricing, and inventory visibility. The goal was to enhance customer experience, improve operational efficiency, and drive business growth.
     </li>
     <li>
       <strong>Mobile Field Service:</strong> 
