--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <ul>
     <li>
       <strong>Heavy Duty Parts Catalog Integration</strong> 
-      <a href="https://avasudev18/PFolioAV.github.io/feature/Heavy-Duty-Parts-Catalog-Integration.pdf" target="_blank">
+      <a href="https://avasudev18.github.io/PFolioAV.github.io/feature/Heavy-Duty-Parts-Catalog-Integration.pdf" target="_blank">
         This project
         </a> integrated heavy-duty parts catalogs with the CxCommerce platform to enable real-time product data, pricing, and inventory visibility. The goal was to enhance customer experience, improve operational efficiency, and drive business growth.
     </li>
