--- a/index.html
+++ b/index.html
@@ -138,7 +138,17 @@
       data—such as demand elasticity, competitor pricing, inventory levels, and customer behavior—to algorithmically adjust prices and maximize revenue performance.
     </li>
   </ul>
+  
 </div>
+  <div class="card">
+      <h2>Professional Experience Highlights</h2>
+      <ul>
+        <li><strong>PhaseZero Ventures</strong> – Director, Product Management (2022–Today)</li>
+        <li><strong>Accenture</strong> – Consulting Architect Manager (2021–2022)</li>
+        <li><strong>Oracle</strong> – Senior Principal Product Manager (2007–2020)</li>
+      </ul>
+      <p>Successfully launched field service automation, digital commerce platforms, and analytics tools impacting global operations.</p>
+  </div>
     
     <div class="card">
       <h2>Certifications</h2>
