--- a/index.html
+++ b/index.html
@@ -100,6 +100,18 @@
 <div class="card">
   <h2>Artifacts</h2>
   <ul>
+
+<div class="cards-container">
+
+    <div class="card">
+      <h3>Customer Master Data Integration</h3>
+      <p>
+        <a href="https://avasudev18.github.io/PFolioAV.github.io/feature/Customer-Master-Data-Integration-Eliminating-Inconsistencies.pdf" target="_blank">This project</a>
+        focuses on synchronizing customer records across CxCommerce and multiple ERP systems. It eliminates data inconsistencies and enhances order processing through a multi-channel approach.
+      </p>
+    </div>
+
+    
         <li>
       <strong>Customer Master Data Integration: Eliminating Inconsistencies</strong> 
       <a href="https://avasudev18.github.io/PFolioAV.github.io/feature/Customer-Master-Data-Integration-Eliminating-Inconsistencies.pdf" target="_blank">
