--- a/index.html
+++ b/index.html
@@ -111,7 +111,30 @@
       </p>
     </div>
 
-    
+  <div class="card">
+      <h3>Heavy Duty Parts Catalog Integration</h3>
+      <p>
+        <a href="https://avasudev18.github.io/PFolioAV.github.io/feature/Heavy-Duty-Parts-Catalog-Integration.pdf" target="_blank">This project</a>
+        integrates heavy-duty parts catalogs with CxCommerce for real-time product data, pricing, and inventory visibility, improving customer experience and operational efficiency.
+      </p>
+    </div>
+
+  <div class="card">
+      <h3>Mobile Field Service</h3>
+      <p>
+        <a href="https://avasudev18.github.io/PFolioAV.github.io/MobileFieldService.mp4" target="_blank">This video</a>
+        demonstrates Oracle Field Service integrated with third-party vendors via robust APIs, enabling real-time coordination and streamlined field operations.
+      </p>
+    </div>
+
+  <div class="card">
+      <h3>Dynamic Pricing</h3>
+      <p>
+        <a href="https://youtu.be/-oHZEWG3xq8?si=Ovdgtu5xsUalDKj7" target="_blank">This podcast</a>
+        explores AI-powered dynamic pricing models in eCommerce. It covers how intelligent agents use data like demand, competition, and customer behavior to optimize prices.
+      </p>
+    </div>
+  
         <li>
       <strong>Customer Master Data Integration: Eliminating Inconsistencies</strong> 
       <a href="https://avasudev18.github.io/PFolioAV.github.io/feature/Customer-Master-Data-Integration-Eliminating-Inconsistencies.pdf" target="_blank">
