--- a/index.html
+++ b/index.html
@@ -119,19 +119,27 @@
       </p>
     </div>
 
-  <div class="card">
-      <h3>Mobile Field Service</h3>
+     <div class="card">
+      <h3>Product Recommendation</h3>
       <p>
-        <a href="https://avasudev18.github.io/PFolioAV.github.io/MobileFieldService.mp4" target="_blank">This video</a>
-        demonstrates Oracle Field Service integrated with third-party vendors via robust APIs, enabling real-time coordination and streamlined field operations.
+        <a href="https://avasudev18.github.io/PFolioAV.github.io/feature/Boosting-Revenue-with-AI-Powered-Product-Recommendations.pdf" target="_blank">This project</a>
+        Driving sales and redefining customer engagement with the power of machine learning.
       </p>
     </div>
-
-  <div class="card">
+  
+   <div class="card">
       <h3>Dynamic Pricing</h3>
       <p>
         <a href="https://youtu.be/-oHZEWG3xq8?si=Ovdgtu5xsUalDKj7" target="_blank">This podcast</a>
         explores AI-powered dynamic pricing models in eCommerce. It covers how intelligent agents use data like demand, competition, and customer behavior to optimize prices.
+      </p>
+    </div>
+
+   <div class="card">
+      <h3>Mobile Field Service</h3>
+      <p>
+        <a href="https://avasudev18.github.io/PFolioAV.github.io/MobileFieldService.mp4" target="_blank">This video</a>
+        demonstrates Oracle Field Service integrated with third-party vendors via robust APIs, enabling real-time coordination and streamlined field operations.
       </p>
     </div>
   
