--- a/index.html
+++ b/index.html
@@ -178,6 +178,27 @@
   <ul>
   </ul>
 </div>
+
+    <div class="card">
+       <img src="https://avasudev18.github.io/PFolioAV.github.io/LinkedIn Photo.jpg" 
+     alt="Anil Vasudev" 
+     style="width:150px; height:150px; border-radius: 50%; margin-bottom: 20px;" />
+      <h2>SDLC</h2>
+      <p>
+      Use Case: "SmartGardener" – Personalized Gardening Assistant App
+      Empower home gardeners with personalized insights and tools to manage their indoor and outdoor plants effectively—based on location, season, and plant health status.
+       </p>
+      <p>
+    <a href="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/FunctionalDesginDocument.html" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
+    🌐 Functional Design Document</a>
+    <a href="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/GardenApp_Wire.png" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
+    🌐 Simple Wireframe</a>
+    <a href="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/GardenApp.html" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
+    🌐 Prototype</a>
+
+      </p>
+    </div>
+    
     
   </section>
 
