--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
 </div>
 
     <div class="card">
-       <img src="https://avasudev18.github.io/PFolioAV.github.io/LinkedIn Photo.jpg" 
-     alt="Anil Vasudev" 
+       <img src="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/SmartGardner.jpeg" 
+     alt="Smart Gardner" 
      style="width:150px; height:150px; border-radius: 50%; margin-bottom: 20px;" />
       <h2>SDLC</h2>
       <p>
