--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <div class="card">
        <img src="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/SmartGardner.jpeg" 
      alt="Smart Gardner" 
-     style="width:150px; height:150px; border-radius: 50%; margin-bottom: 20px;" />
+     style="width:150px; height:150px; border-radius: 0; margin-bottom: 20px;" />
       <h2>SDLC</h2>
       <p>
       Use Case: "SmartGardener" – Personalized Gardening Assistant App
