--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
 </div>
 
     <div class="card">
+      object-fit: cover;
        <img src="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/SmartGardner.jpeg" 
      alt="Smart Gardner" 
      style="width:150px; height:150px; border-radius: 0; margin-bottom: 20px;" />
