--- a/index.html
+++ b/index.html
@@ -185,16 +185,22 @@
      style="width:150px; height:150px; border-radius: 40; margin-bottom: 20px;" />
       <h2>SDLC</h2>
       <p>
-      Use Case: "SmartGardener" – Personalized Gardening Assistant App
-      Empower home gardeners with personalized insights and tools to manage their indoor and outdoor plants effectively—based on location, season, and plant health status.
+      How to view through a PM lens? 
+      A Product Manager (PM) is responsible for guiding the success of a product and leading the cross-functional team responsible for improving it. They act as the bridge between business, technology, 
+      and user experience. 
+    🔹 Key Responsibilities:
+      Define product vision and strategy based on market needs and company goals. Gather and prioritize requirements from customers, stakeholders, and competitive analysis. Collaborate with engineering, design, marketing, and sales to deliver product features.
+      Own the product roadmap and lifecycle—from concept to launch and iteration. Measure success through KPIs like customer adoption, retention, and ROI.
+      A highly workflow shown below <br>
+      Use Case: "SmartGardener" – Personalized Gardening Assistant App - Empower home gardeners with personalized insights and tools to manage their indoor and outdoor plants effectively—based on location, season, and plant health status.
        </p>
       <p>
     <a href="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/FunctionalDesginDocument.html" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
-    🌐 Functional Design Document</a>
+    🌐 1.Functional Design Document</a>
     <a href="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/GardenApp_Wire.png" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
-    🌐 Simple Wireframe</a>
+    🌐 2. Simple Wireframe</a>
     <a href="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/GardenApp.html" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
-    🌐 Prototype</a>
+    🌐 3. Prototype</a>
 
       </p>
     </div>
