--- a/index.html
+++ b/index.html
@@ -187,10 +187,13 @@
       <p>
       How to view through a PM lens? 
       A Product Manager (PM) is responsible for guiding the success of a product and leading the cross-functional team responsible for improving it. They act as the bridge between business, technology, 
-      and user experience. 
-    🔹 Key Responsibilities:
-      Define product vision and strategy based on market needs and company goals. Gather and prioritize requirements from customers, stakeholders, and competitive analysis. Collaborate with engineering, design, marketing, and sales to deliver product features.
-      Own the product roadmap and lifecycle—from concept to launch and iteration. Measure success through KPIs like customer adoption, retention, and ROI.
+      and user experience. <br>
+      Key Responsibilities:<br>
+     🔹 Define product vision and strategy based on market needs and company goals. <br>
+      🔹Gather and prioritize requirements from customers, stakeholders, and competitive analysis. <br>
+      🔹Collaborate with engineering, design, marketing, and sales to deliver product features.<br>
+      🔹Own the product roadmap and lifecycle—from concept to launch and iteration. <br>
+      🔹Measure success through KPIs like customer adoption, retention, and ROI.<br>
       A highly workflow shown below <br>
       Use Case: "SmartGardener" – Personalized Gardening Assistant App - Empower home gardeners with personalized insights and tools to manage their indoor and outdoor plants effectively—based on location, season, and plant health status.
        </p>
