--- a/index.html
+++ b/index.html
@@ -183,9 +183,8 @@
      <img src="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/SmartGardner.jpeg" 
      alt="Smart Gardner" 
      style="width:150px; height:150px; border-radius: 40; margin-bottom: 20px;" />
-      <h2>SDLC</h2>
+      <h2>How to view through a Product Manager's lens</h2>
       <p>
-      How to view through a PM lens? 
       A Product Manager (PM) is responsible for guiding the success of a product and leading the cross-functional team responsible for improving it. They act as the bridge between business, technology, 
       and user experience. <br>
       Key Responsibilities:<br>
@@ -194,7 +193,7 @@
       🔹Collaborate with engineering, design, marketing, and sales to deliver product features.<br>
       🔹Own the product roadmap and lifecycle—from concept to launch and iteration. <br>
       🔹Measure success through KPIs like customer adoption, retention, and ROI.<br>
-      A highly workflow shown below <br>
+      A simple PM workflow shown below <br>
       Use Case: "SmartGardener" – Personalized Gardening Assistant App - Empower home gardeners with personalized insights and tools to manage their indoor and outdoor plants effectively—based on location, season, and plant health status.
        </p>
       <p>
