--- a/index.html
+++ b/index.html
@@ -186,14 +186,14 @@
       <h2>How to view through a Product Manager's lens</h2>
       <p>
       A Product Manager (PM) is responsible for guiding the success of a product and leading the cross-functional team responsible for improving it. They act as the bridge between business, technology, 
-      and user experience. <br>
+      and user experience. <br><br>
       Key Responsibilities:<br>
      🔹 Define product vision and strategy based on market needs and company goals. <br>
       🔹Gather and prioritize requirements from customers, stakeholders, and competitive analysis. <br>
       🔹Collaborate with engineering, design, marketing, and sales to deliver product features.<br>
       🔹Own the product roadmap and lifecycle—from concept to launch and iteration. <br>
-      🔹Measure success through KPIs like customer adoption, retention, and ROI.<br>
-      A simple PM workflow shown below <br>
+      🔹Measure success through KPIs like customer adoption, retention, and ROI.<br><br>
+      A simple PM workflow shown below <br><br>
       Use Case: "SmartGardener" – Personalized Gardening Assistant App - Empower home gardeners with personalized insights and tools to manage their indoor and outdoor plants effectively—based on location, season, and plant health status.
        </p>
       <p>
@@ -203,7 +203,6 @@
     🌐 2. Simple Wireframe</a>
     <a href="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/GardenApp.html" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
     🌐 3. Prototype</a>
-
       </p>
     </div>
     
