--- a/index.html
+++ b/index.html
@@ -194,7 +194,8 @@
       🔹Own the product roadmap and lifecycle—from concept to launch and iteration. <br>
       🔹Measure success through KPIs like customer adoption, retention, and ROI.<br><br>
       A simple PM workflow shown below <br><br>
-      Use Case: "SmartGardener" – Personalized Gardening Assistant App - Empower home gardeners with personalized insights and tools to manage their indoor and outdoor plants effectively—based on location, season, and plant health status.
+      "SmartGardener" is a personalized gardening assistant app designed to empower home gardeners with intelligent insights and practical tools to effectively manage both indoor and outdoor plants. By leveraging real-time location data, seasonal patterns, and plant health diagnostics, the app provides tailored recommendations to optimize plant care and ensure healthy growth.
+       Throughout the product development lifecycle, I strategically incorporated generative AI tools at each stage to accelerate ideation, improve feature design, and elevate the overall user experience. <br>
        </p>
       <p>
     <a href="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/FunctionalDesginDocument.html" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
@@ -203,6 +204,8 @@
     🌐 2. Simple Wireframe</a>
     <a href="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/GardenApp.html" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
     🌐 3. Prototype</a>
+    <a href="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/Mobile App.pdf" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
+    🌐 4. GardenApp (Beta)</a>
       </p>
     </div>
     
