--- a/index.html
+++ b/index.html
@@ -173,11 +173,11 @@
       </ul>
     </div>
 
- <div class="card">
-  <h2><a href="https://avasudev18.github.io/PFolioAV.github.io/passion.html" style="text-decoration: none; color: inherit;">Passion</a></h2>
-  <ul>
-  </ul>
-</div>
+<!--  <div class="card">  -->
+<!--  <h2><a href="https://avasudev18.github.io/PFolioAV.github.io/passion.html" style="text-decoration: none; color: inherit;">Passion</a></h2> -->
+<!--  <ul> -->
+<!--  </ul> -->
+<!-- </div> -->
 
     <div class="card">
      <img src="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/SmartGardner.jpeg" 
