--- a/index.html
+++ b/index.html
@@ -180,10 +180,11 @@
 <!-- </div> -->
 
     <div class="card">
-     <img src="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/SmartGardner.jpeg" 
+     <h2>Reimagining the Future: A Product Manager’s Lens on AI Innovation</h2>
+      <img src="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/SmartGardner.jpeg" 
      alt="Smart Gardner" 
      style="width:150px; height:150px; border-radius: 40; margin-bottom: 20px;" />
-      <h2>How to view through a Product Manager's lens</h2>
+<!--    <h2>How to view through a Product Manager's lens</h2> -->
       <p>
       A Product Manager (PM) is responsible for guiding the success of a product and leading the cross-functional team responsible for improving it. They act as the bridge between business, technology, 
       and user experience. <br><br>
