--- a/index.html
+++ b/index.html
@@ -210,7 +210,22 @@
       </p>
     </div>
     
-    
+    <div class="card">
+      <h2>Certifications</h2>
+      <ul>
+        <li>Generative AI (ChatGPT), Machine Learning, Executive Data Science</li>
+        <li>Cloud Architecture (AWS, Azure, GCP)</li>
+        <li>Technology for Product Managers, Chatbot Essentials</li>
+      </ul>
+    </div>
+
+    <div class="card">
+      <h2>Education</h2>
+      <ul>
+        <li>M.S. in Information Science – Colorado Tech University</li>
+        <li>M.S. in Physics – Mahatma Gandhi University, India</li>
+      </ul>
+    </div>
   </section>
 
   <footer>
