--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <a href="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/Mobile App.pdf" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
     🌐 4. GardenApp (Beta)</a>
     <a href="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/SWOT.pdf" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
-    🌐 5. SWOT (Beta)</a>
+    🌐 5. SWOT</a>
       </p>
     </div>
     
