--- a/index.html
+++ b/index.html
@@ -200,6 +200,12 @@
     <div class="card">
       <h2>Certifications</h2>
       <ul>
+        <li>Oracle Cloud Infrastructure (OCI) 2025 AI Vector Search Certified Professional – advanced indexing (HNSW, IVF), similarity search and retrieval‑augmented generation (RAG) solutions.
+</li>
+        <li>OCI 2025 Generative AI Professional – comprehensive credential covering generative AI models and applications on Oracle Cloud Infrastructure.
+</li>
+        <li>OCI 2025 Certified AI Foundations Associate – AI, machine learning and deep learning fundamentals, OCI AI services and Oracle 23ai.
+</li>
         <li>Generative AI (ChatGPT), Machine Learning, Executive Data Science</li>
         <li>Cloud Architecture (AWS, Azure, GCP)</li>
         <li>Technology for Product Managers, Chatbot Essentials</li>
@@ -220,3 +226,4 @@
   </footer>
 </body>
 </html>
+
