Fix HTML formatting and update content

--- a/index.html
+++ b/index.html
@@ -200,6 +200,8 @@
     <div class="card">
       <h2>Certifications</h2>
       <ul>
+       <li>Oracle Fusion AI Agent Studio Foundations Associate (2025)-including designing agent workflows, implementing RAG-based knowledge retrieval, configuring multi-agent orchestration, and applying GenAI capabilities
+</li>
         <li>Oracle Cloud Infrastructure (OCI) 2025 AI Vector Search Certified Professional – advanced indexing (HNSW, IVF), similarity search and retrieval‑augmented generation (RAG) solutions
 </li>
         <li>OCI 2025 Generative AI Professional – comprehensive credential covering generative AI models and applications on Oracle Cloud Infrastructure
@@ -226,5 +228,6 @@
   </footer>
 </body>
 </html>
+
 
 
