--- a/index.html
+++ b/index.html
@@ -161,7 +161,45 @@
 <!--  <ul> -->
 <!--  </ul> -->
 <!-- </div> -->
+<!-- NEW SECTION START -->
+       <div class="card">
+     <h2>AI-Driven Product Manager Interview Preparation Workflow</h2>
+      <img src="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/SmartGardner.jpeg" 
+     alt="Agentic Workflow" 
+     style="width:150px; height:150px; border-radius: 40; margin-bottom: 20px;" />
+<!--    <h2>How to view through a Product Manager's lens</h2> -->
+      <p>
+      A Product Manager (PM) is responsible for guiding the success of a product and leading the cross-functional team responsible for improving it. They act as the bridge between business, technology, 
+      and user experience. <br><br>
+      Key Responsibilities:<br>
+     🔹 Define product vision and strategy based on market needs and company goals. <br>
+      🔹Gather and prioritize requirements from customers, stakeholders, and competitive analysis. <br>
+      🔹Collaborate with engineering, design, marketing, and sales to deliver product features.<br>
+      🔹Own the product roadmap and lifecycle—from concept to launch and iteration. <br>
+      🔹Measure success through KPIs like customer adoption, retention, and ROI.<br><br>
+      A simple PM workflow shown below <br><br>
+      "Agentic workflow" - Create a multi-agent workflow that continuously monitors my job applications, detects interview invitations, and automatically prepares personalized interview readiness materials for each role (Product Manager, Director/Principal PM, Customer Success Leader, Field Service/ERP Integration roles, Digital Commerce PM, etc.).
+        <br>
+       </p>
+      <p>
+    <a href="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/FunctionalDesginDocument.html" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
+    🌐 1.Functional Design Document</a>
+    <a href="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/GardenApp_Wire.png" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
+    🌐 2. Simple Wireframe</a>
+    <a href="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/GardenApp.html" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
+    🌐 3. Prototype</a>
+    <a href="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/Mobile App.pdf" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
+    🌐 4. GardenApp (Beta)</a>
+    <a href="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/SWOT.pdf" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
+    🌐 5. SWOT</a>
+    <a href="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/Strategy Roadmap.pdf" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
+    🌐 6. Strategy Roadmap</a>
+      </p>
+    </div>
 
+    
+<!-- New SECTION END -->
+    
     <div class="card">
      <h2>Reimagining the Future: A Product Manager’s Lens on AI Innovation</h2>
       <img src="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/SmartGardner.jpeg" 
@@ -228,6 +266,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
