--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 <!-- NEW SECTION START -->
        <div class="card">
      <h2>AI-Driven Product Manager Interview Preparation Workflow</h2>
-      <img src="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/SmartGardner.jpeg" 
+      <img src="https://avasudev18.github.io/PFolioAV.github.io/feature/PM Interview Prep Agentic Workflow.png"
      alt="Agentic Workflow" 
      style="width:150px; height:150px; border-radius: 40; margin-bottom: 20px;" />
 <!--    <h2>How to view through a Product Manager's lens</h2> -->
@@ -266,6 +266,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
