--- a/index.html
+++ b/index.html
@@ -167,19 +167,32 @@
       <img src="https://avasudev18.github.io/PFolioAV.github.io/feature/PM Interview Prep Agentic Workflow.png"
      alt="Agentic Workflow" 
      style="width:150px; height:150px; border-radius: 40; margin-bottom: 20px;" />
-<!--    <h2>How to view through a Product Manager's lens</h2> -->
+<!--    <h2>AI-Driven Product Manager Interview Preparation Workflow </h2> -->
       <p>
-      A Product Manager (PM) is responsible for guiding the success of a product and leading the cross-functional team responsible for improving it. They act as the bridge between business, technology, 
-      and user experience. <br><br>
-      Key Responsibilities:<br>
-     🔹 Define product vision and strategy based on market needs and company goals. <br>
-      🔹Gather and prioritize requirements from customers, stakeholders, and competitive analysis. <br>
-      🔹Collaborate with engineering, design, marketing, and sales to deliver product features.<br>
-      🔹Own the product roadmap and lifecycle—from concept to launch and iteration. <br>
-      🔹Measure success through KPIs like customer adoption, retention, and ROI.<br><br>
-      A simple PM workflow shown below <br><br>
-      "Agentic workflow" - Create a multi-agent workflow that continuously monitors my job applications, detects interview invitations, and automatically prepares personalized interview readiness materials for each role (Product Manager, Director/Principal PM, Customer Success Leader, Field Service/ERP Integration roles, Digital Commerce PM, etc.).
+      Agentic workflow - Create a multi-agent workflow that continuously monitors my job applications, detects interview invitations, and automatically prepares personalized interview readiness materials for each role (Product Manager, Director/Principal PM, Customer Success Leader, Field Service/ERP Integration roles, Digital Commerce PM, etc.).
+        <br> 
+      Create a multi-agent workflow containing the following steps: <br>
+        1️⃣ Job Intake & Interview Detection Agent
         <br>
+        2️⃣ Role & JD Analysis Agent
+        <br>
+        3️⃣ Company Research Agent
+        <br>
+        4️⃣ Recruiter & Hiring Manager Analysis Agent
+        <br>
+        5️⃣ Core Interview Question Generator Agent
+        <br>
+        6️⃣ Quantified STAR Story Builder Agent
+        <br>
+        7️⃣ Product Deep Dive & 30-60-90 Day Plan Agent
+        <br>
+        8️⃣ Mock Interview Simulation Agent
+      <br><br>
+      What Next?<br>
+      🔹Run your automation <br>
+      🔹Monitor, test, evaluate and improve<br>
+      🔹Integrate with your with other apps<br>
+       <br>
        </p>
       <p>
     <a href="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/FunctionalDesginDocument.html" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
@@ -266,6 +279,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
