--- a/index.html
+++ b/index.html
@@ -166,12 +166,12 @@
      <h2>AI-Driven Product Manager Interview Preparation Workflow</h2>
       <img src="https://avasudev18.github.io/PFolioAV.github.io/feature/PM Interview Prep Agentic Workflow.png"
      alt="Agentic Workflow" 
-     style="width:150px; height:150px; border-radius: 40; margin-bottom: 20px;" />
+     style="width:175px; height:175px; border-radius: 40; margin-bottom: 20px;" />
 <!--    <h2>AI-Driven Product Manager Interview Preparation Workflow </h2> -->
       <p>
-      Agentic workflow - Create a multi-agent workflow that continuously monitors my job applications, detects interview invitations, and automatically prepares personalized interview readiness materials for each role (Product Manager, Director/Principal PM, Customer Success Leader, Field Service/ERP Integration roles, Digital Commerce PM, etc.).
+      Agentic workflow - Create a multi-agent workflow that inspect candidate's job applications, detects interview invitations, and automatically prepares personalized interview readiness materials for each role (Ex: Product Manager, Director/Principal PM, Customer Success Leader, Field Service/ERP Integration roles, Digital Commerce PM, etc.).
         <br> 
-      Create a multi-agent workflow containing the following steps: <br>
+      Create a multi-agent workflow containing the following steps: <br><br>
         1️⃣ Job Intake & Interview Detection Agent
         <br>
         2️⃣ Role & JD Analysis Agent
@@ -194,21 +194,7 @@
       🔹Integrate with your with other apps<br>
        <br>
        </p>
-      <p>
-    <a href="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/FunctionalDesginDocument.html" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
-    🌐 1.Functional Design Document</a>
-    <a href="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/GardenApp_Wire.png" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
-    🌐 2. Simple Wireframe</a>
-    <a href="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/GardenApp.html" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
-    🌐 3. Prototype</a>
-    <a href="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/Mobile App.pdf" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
-    🌐 4. GardenApp (Beta)</a>
-    <a href="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/SWOT.pdf" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
-    🌐 5. SWOT</a>
-    <a href="https://avasudev18.github.io/PFolioAV.github.io/Prototypes/Mobile/Strategy Roadmap.pdf" target="_blank" style="display: inline-block; margin-top: 12px; padding: 10px 16px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: 500;">
-    🌐 6. Strategy Roadmap</a>
-      </p>
-    </div>
+       </div>
 
     
 <!-- New SECTION END -->
@@ -279,6 +265,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
