--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
      style="width:175px; height:175px; border-radius: 40; margin-bottom: 20px;" />
 <!--    <h2>AI-Driven Product Manager Interview Preparation Workflow </h2> -->
       <p>
-      Agentic workflow - Create a multi-agent workflow that inspect candidate's job applications, detects interview invitations, and automatically prepares personalized interview readiness materials for each role (Ex: Product Manager, Director/Principal PM, Customer Success Leader, Field Service/ERP Integration roles, Digital Commerce PM, etc.).
+      This agentic workflow consists multi-agent workflow that inspect candidate's job applications, detects interview invitations, and automatically prepares personalized interview readiness materials for each role (Ex: Product Manager, Director/Principal PM, Customer Success Leader, Field Service/ERP Integration roles, Digital Commerce PM, etc.).
         <br> 
       Create a multi-agent workflow containing the following steps: <br><br>
         1️⃣ Job Intake & Interview Detection Agent
@@ -265,6 +265,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
