Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -189,9 +189,9 @@
         8️⃣ Mock Interview Simulation Agent
       <br><br>
       What Next?<br>
-      🔹Run your automation <br>
-      🔹Monitor, test, evaluate and improve<br>
-      🔹Integrate with your with other apps<br>
+      1️⃣ Run the automation <br>
+      2️⃣ Monitor, test, evaluate and improve<br>
+      3️⃣ Integrate with your with other apps<br>
        <br>
        </p>
        </div>
@@ -265,6 +265,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
