--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </div>
     
 <div class="card">
-  <h2>Artifacts</h2>
+  <h2>Major Implementations</h2>
   <ul>
 
 <div class="cards-container">
@@ -265,6 +265,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
