--- a/index.html
+++ b/index.html
@@ -164,9 +164,18 @@
 <!-- NEW SECTION START -->
        <div class="card">
      <h2>AI-Driven Product Manager Interview Preparation Workflow</h2>
+         
       <img src="https://avasudev18.github.io/PFolioAV.github.io/feature/PM Interview Prep Agentic Workflow.png"
      alt="Agentic Workflow" 
-     style="width:1000px; height:auto; border-radius: 40; margin-bottom: 20px;" />
+     style="width:700px; height:auto; border-radius: 40; margin-bottom: 20px;" />
+
+         <a href="https://avasudev18.github.io/PFolioAV.github.io/feature/PM Interview Prep Agentic Workflow.png" target="_blank">
+         <img src="https://avasudev18.github.io/PFolioAV.github.io/feature/PM Interview Prep Agentic Workflow.png"
+         alt="Agentic Workflow"
+         style="width:700px; height:auto; border-radius:40px; margin-bottom:20px;" />
+</a>
+
+         
 <!--    <h2>AI-Driven Product Manager Interview Preparation Workflow </h2> -->
       <p>
       This agentic workflow consists multi-agent workflow that inspect candidate's job applications, detects interview invitations, and automatically prepares personalized interview readiness materials for each role (Ex: Product Manager, Director/Principal PM, Customer Success Leader, Field Service/ERP Integration roles, Digital Commerce PM, etc.).
@@ -265,6 +274,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
