--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 <!-- </div> -->
 <!-- NEW SECTION START -->
        <div class="card">
-     <h2>AI-Driven Product Manager Interview Preparation Workflow</h2>
+     <h2>AI-Powered Agentic Workflow to Optimize Interview Preparation</h2>
          
          <a href="https://avasudev18.github.io/PFolioAV.github.io/feature/PM Interview Prep Agentic Workflow.png" target="_blank">
          <img src="https://avasudev18.github.io/PFolioAV.github.io/feature/PM Interview Prep Agentic Workflow.png"
@@ -270,6 +270,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
