--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
     <div class="card">
       <h3>Customer Master Data Integration</h3>
       <p>
-        <a href="https://avasudev18.github.io/PFolioAV.github.io/feature/Customer-Master-Data-Integration-Eliminating-Inconsistencies.pdf" target="_blank">This project</a>
-        focuses on synchronizing customer records across CxCommerce and multiple ERP systems. It eliminates data inconsistencies and enhances order processing through a multi-channel approach.
+        Customer Master Data Integration focuses on synchronizing customer records across CxCommerce and multiple ERP systems. It eliminates data inconsistencies and enhances order processing through a multi-channel approach.
+        <a href="https://avasudev18.github.io/PFolioAV.github.io/feature/Customer-Master-Data-Integration-Eliminating-Inconsistencies.pdf" target="_blank">More...</a>
       </p>
     </div>
 
@@ -278,6 +278,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
