--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
  <p>
        🧠Enterprise Systems
  <p>
-       Oracle Field Service, Oracle Cloud, SAP, Infor, Karmak, DST, large-scale ERP commerce workflows.
+       Oracle Field Service, Oracle Cloud, Infor, Karmak, DST, large-scale ERP commerce workflows.
  <p>
        🔄 Customer Success Leadership
  <p>
@@ -116,13 +116,9 @@
  <p>
        📈 Tools & Platforms
  <p>
-       Jira, Asana, ProductBoard, Miro, Figma, Python, Gemini, REST APIs, OCI, GCP.
+       Jira, roductBoard, Miro, Figma, Python, Kaggle, Gemini, REST APIs, OCI, GCP.
    <p></p>
-        💡 Product Lifecycle Management | 📊 Data-Driven Decision Making  | 🤝 Customer Success Strategy | ☁️ Cloud Platforms (AWS, Azure, GCP) |
-        🔗 ERP & Catalog Integrations | 🧠 Generative AI & Chatbots | 🔄 Operational Efficiency | 📈 Revenue Acceleration | 🤝 Continuous Improvement |
-         📊 Agile Methodologies | 💡Digital Transformation | 🔄 Customer Experience (CX) | 🔗 Cross-Functional Collaboration | 🔄 Continuous Improvement |
-         🔄 Customer Retention | 🤝 Team Leadership
-      </p>
+    </p>
     </div>
 
 
@@ -301,6 +297,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
