--- a/index.html
+++ b/index.html
@@ -98,25 +98,25 @@
     <div class="card">
       <h2>Core Expertise</h2>
       <p>
-        💡 Product Leadership
+        💡 <h3>Product Leadership
         <p>
         Roadmaps, GTM strategy, requirements, prioritization frameworks, cross-functional alignment, stakeholder influence.
  <p>
-       🤝AI / Machine Learning
+       🤝<h3>AI / Machine Learning
  <p>
        AI agents, generative AI workflows, RAG pipelines, recommendation models, catalog intelligence, predictive analytics.
  <p>
-       🧠Enterprise Systems
+       🧠<h3>Enterprise Systems
  <p>
        Oracle Field Service, Oracle Cloud, Infor, Karmak, DST, large-scale ERP commerce workflows.
  <p>
-       🔄 Customer Success Leadership
+       🔄<h3>Customer Success Leadership
  <p>
        Adoption, retention, renewal strategy, onboarding workflows, NPS improvement, support optimization.
  <p>
-       📈 Tools & Platforms
+       📈<h3>Tools & Platforms
  <p>
-       Jira, roductBoard, Miro, Figma, Python, Kaggle, Gemini, REST APIs, OCI, GCP.
+       Jira, Miro, Figma, Python, Kaggle, Gemini, REST APIs, OCI, GCP.
    <p></p>
     </p>
     </div>
@@ -297,6 +297,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
