--- a/index.html
+++ b/index.html
@@ -98,23 +98,23 @@
     <div class="card">
       <h2>Core Expertise</h2>
       <p>
-        💡 <h3>Product Leadership </h3>
+        <h3>Product Leadership </h3>
         <p>
         Roadmaps, GTM strategy, requirements, prioritization frameworks, cross-functional alignment, stakeholder influence.
  <p>
-       🤝<h3>AI / Machine Learning</h3>
+       <h3>AI / Machine Learning</h3>
  <p>
        AI agents, generative AI workflows, RAG pipelines, recommendation models, catalog intelligence, predictive analytics.
  <p>
-       🧠<h3>Enterprise Systems</h3>
+       <h3>Enterprise Systems</h3>
  <p>
        Oracle Field Service, Oracle Cloud, Infor, Karmak, DST, large-scale ERP commerce workflows.
  <p>
-       🔄<h3>Customer Success Leadership</h3>
+       <h3>Customer Success Leadership</h3>
  <p>
        Adoption, retention, renewal strategy, onboarding workflows, NPS improvement, support optimization.
  <p>
-       📈<h3>Tools & Platforms</h3>
+       <h3>Tools & Platforms</h3>
  <p>
        Jira, Miro, Figma, Python, Kaggle, Gemini, REST APIs, OCI, GCP.
    <p></p>
@@ -297,6 +297,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
